update get qa_transaction
